--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=mathew
+spring.security.user.password=password
+spring.security.user.roles=ADMIN
